[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/textures/background.png" type="Texture" id=1]
[ext_resource path="res://characters/Population.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/ObstacleSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://World.gd" type="Script" id=6]
[ext_resource path="res://ui/Menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://environment/Ceiling.tscn" type="PackedScene" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Menu" parent="." instance=ExtResource( 7 )]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ObstacleSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 798, 0 )

[node name="Ground" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 686 )

[node name="Ceiling" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -1296 )

[node name="Population" parent="." instance=ExtResource( 2 )]

[connection signal="start_game" from="Menu" to="." method="_on_Menu_start_game"]
[connection signal="start_simulation" from="Menu" to="." method="_on_Menu_start_simulation"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="extinct" from="Population" to="." method="_on_Population_extinct"]
[connection signal="player_died" from="Population" to="." method="_on_Population_player_died"]

[editable path="Ground"]
